# misc

./: .gitignore  README.md  cmp_dirs.py  lvmetad_client.py  music_downloader.py  template.py
aoc/2022_rust/: Cargo.toml  Makefile  shell.nix
aoc/2022_rust/src/aoc2022/: aoc_03.rs  aoc_04.rs
ast/: ast1.py  example.py  tokenizer_private.py  transform_private.py
btree/: btree.py
codejam2011/: music.py
codejam2012/: bejeweled.in  bejeweled.py  quake.py  quake_new.py  tech.py
codejam2013/: bullseye.py  fairandsquare.py  fairandsquare_safe.py  mower.py  template.py  tictactoe.py  treasure.py
codejam2014/: counter.py
declare/: .style.yapf  declarative.py  example.py  tests.py
docs/: python_programming_guide.md
erlang/: aoc1.erl  aoc1.py  aoc2.erl  first.erl
euler/: .gitignore  Makefile  c_prime.py  factor.py  largest.py  p001.py  p002.py  p003.py  p004.py  p005.py  p006.py  p007.py  p008.py  p009.py  p010.py  p011.py  p012.c  p012.py  p013.py  p014.py  p015.py  p016.py  p017.py  p018.py  p019.py  p020.py  p021.py  p022.py  p023.py  p024.py  p025.py  p026.py  p027.py  p028.py  p029.py  p030.py  p031.py  p032.py  p033.py  p034.py  (+44 more)
grid/: index.html  index.js  package.json
hdr/: render_hdr.py
how_you_write_python/: c_started.py  no_background_few_days_later.py  no_background_just_started.py  oop.py
html/: calc.html
imgstat/: imgstat.py  imgstat.pys  print_profile.py  profiledata
json_pointer/: example.py  test_example.py
kv_server/: Makefile  client.py  database.c  database.h  server.c
microbit/: fade.py  game.hex  game.jsz  game.py  shining.py  (+5 more)
(+181 files in other folders)
